<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_cpp_template</name>
  <version>0.0.0</version>
  <description>The ros2_cpp_template package</description>
  <maintainer email="maintainer@email.com">maintainer name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>ros2launch</depend>
  <depend>nav2_common</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <test_depend>ament_cpplint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
